--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -15,6 +15,10 @@
     "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
     "message": "AdBlock: el mejor bloqueador de anuncios"
   },
+  "name": {
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock: el mejor bloqueador de anuncios"
+  },
   "description_edge": {
     "message": "AdBlock. El bloqueador de anuncios número 1 con más de 200 millones de descargas. Bloquea anuncios de toda la web.",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -434,7 +438,7 @@
     "description": "A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
   },
   "filteracceptable_ads": {
-    "message": "Anuncios aceptables",
+    "message": "Anuncios Aceptables",
     "description": "A filter list"
   },
   "filteradblock_custom": {
@@ -638,19 +642,19 @@
     "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
-    "message": "Comprobar filtros de Anuncios aceptables:",
+    "message": "Comprobar filtros de Anuncios Aceptables:",
     "description": "Section header on the ad report page"
   },
   "clickdisableaa": {
-    "message": "Haz clic aquí: [[Deshabilitar Anuncios aceptables]]",
+    "message": "Haz clic aquí: [[Deshabilitar Anuncios Aceptables]]",
     "description": "Instruction on ad report page"
   },
   "aamessageadreport": {
-    "message": "Si prefieres no ver anuncios como este, deberías inhabilitar la lista de filtros de Anuncios aceptables.",
+    "message": "Si prefieres no ver anuncios como este, deberías inhabilitar la lista de filtros de Anuncios Aceptables.",
     "description": "Acceptable Ads message on ad report page"
   },
   "aalinkadreport": {
-    "message": "Más información sobre el programa de Anuncios aceptables.",
+    "message": "Más información sobre el programa de Anuncios Aceptables.",
     "description": "Acceptable Ads link message on ad report page"
   },
   "adreportthanks": {
@@ -1752,7 +1756,7 @@
     "description": "Resource list page: column title telling if the resource originates from a different domain"
   },
   "acceptableadsdisable_done": {
-    "message": "Ya no estás suscrito a la lista de filtros de Anuncios aceptables.",
+    "message": "Ya no estás suscrito a la lista de filtros de Anuncios Aceptables.",
     "description": "Message shown to users after disabling Acceptable Ads via the Options page."
   },
   "acceptableadsdisable_how_to_reenable": {
@@ -1780,7 +1784,7 @@
     "description": "Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
   },
   "acceptable_ads_content_blocking_disbled_message": {
-    "message": "Te hemos dado de baja de la lista de Anuncios aceptables porque has activado los bloqueadores de contenido de Safari. Solo puedes seleccionar una opción a la vez. ([[¿Por qué?]])",
+    "message": "Te hemos dado de baja de la lista de Anuncios Aceptables porque has activado los bloqueadores de contenido de Safari. Solo puedes seleccionar una opción a la vez. ([[¿Por qué?]])",
     "description": "Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
   },
   "content_blocking_acceptable_ads_disbled_message": {
@@ -1983,52 +1987,6 @@
     "message": "Selecciona de entre las categorías de más abajo y AdBlock reemplazará los anuncios con imágenes de alta calidad que te alegrarán el día.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
-  "myadblock_enrollment_title": {
-    "message": "¡My AdBlock está instalado en este navegador!",
-    "description": "The title of the MyAdBlock enrollment box."
-  },
-  "myadblock_enrollment_hide_forever": {
-    "message": "No volver a mostrar este mensaje",
-    "description": "The label for a checkbox that will hide the enrollment box forever."
-  },
-  "myadblock_enrollment_success": {
-    "message": "Puedes usar el enlace en el correo de confirmación para desbloquear MyAdBlock en otros navegadores Chrome.",
-    "description": "MyAdBlock successfully licensed message."
-  },
-  "check_email": {
-    "message": "Comprueba tu correo electrónico.",
-    "description": "Prompt the user to check their email for a message from AdBlock"
-  },
-  "please_try_again": {
-    "message": "Vuelve a intentarlo.",
-    "description": "Prompt the user to retry the last action."
-  },
-  "contact_support_if_errors_continue": {
-    "message": "Si sigues viendo este error, ponte en contacto con el servicio de [[support]].",
-    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
-  },
-  "myadblock_enrollment_resend_success": {
-    "message": "Te hemos enviado un enlace a $email$.",
-    "description": "MyAdBlock license email successfully sent message.",
-    "placeholders": {
-      "email": {
-        "content": "$1",
-        "example": "alice@example.com"
-      }
-    }
-  },
-  "myadblock_enrollment_link_info": {
-    "message": "Si haces clic en el enlace, podrás intalar MyAdBlock de forma sencilla en otros navegadores Chrome.",
-    "description": "Explains what happens when clicking the magic link."
-  },
-  "myadblock_enrollment_resend_error": {
-    "message": "Hubo un problema al volver a enviar el correo de confirmación.",
-    "description": "MyAdBlock license email failed to send error message."
-  },
-  "myadblock_enrollment_resend_button": {
-    "message": "reenviar enlace",
-    "description": "Text on the MyAdBlock enrollment resend email button"
-  },
   "myadblock_feedback_title": {
     "message": "¡Estamos deseando saber más de ti!",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2152,10 +2110,6 @@
   "require_restart_browser": {
     "message": "requerirá el reinicio de tu navegador",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
-  },
-  "tabthemes": {
-    "message": "Temas",
-    "description": "A tab on the Options page"
   },
   "themes": {
     "message": "Temas",
@@ -2432,7 +2386,7 @@
     "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
-    "message": "Privacidad de Anuncios aceptables",
+    "message": "Privacidad de Anuncios Aceptables",
     "description": "A filter list"
   },
   "acceptable_ads_privacy": {
@@ -2504,8 +2458,18 @@
     "message": "Solicitud"
   },
   "devtools_request_url": {
-    "description": "sub title text for the request-column of the dev tools panel when the request is rewritten e.g. http://example.com/foo rewritten to http://example.com/bar",
-    "message": "<a0></a0> reescrito a <a1></a1>"
+    "description": "A request URL in the AdBlock DevTools panel",
+    "message": "<a0>$original$</a0> se ha reescrito como <a1>$rewritten$</a1>",
+    "placeholders": {
+      "original": {
+        "content": "$1",
+        "example": "http://example.com/foo"
+      },
+      "rewritten": {
+        "content": "$2",
+        "example": "http://example.com/bar"
+      }
+    }
   },
   "devtools_type_title": {
     "description": "Type column header text",
@@ -2883,18 +2847,6 @@
     "message": "AdBlock Premium",
     "description": "Full name of the AdBlock upgrade."
   },
-  "premium_enrollment_title": {
-    "message": "¡AdBlock Premium está instalado en este navegador!",
-    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
-  },
-  "premium_enrollment_success": {
-    "message": "Puedes usar el enlace mágico del correo de confirmación para desbloquear AdBlock Premium en otros navegadores de Chrome.",
-    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
-  },
-  "premium_enrollment_link_info": {
-    "message": "Haz clic en el link para copiar los ajustes de AdBlock Premium en otros navegadores Chrome.",
-    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
-  },
   "premium_page_title": {
     "message": "AdBlock Premium: una forma mejor de disfrutar de internet.",
     "description": "The text of the header the AdBlock Premium Options page"
@@ -2966,5 +2918,85 @@
   "check_out_themes": {
     "message": "¡Échale un vistazo a los temas!",
     "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "notification_antiadblock_message": {
+    "message": "Se ha reportado que esta página web muestra mensajes dirigidos a usuarios de AdBlock. ¿Quieres que AdBlock oculte los mensajes dirigidos?"
+  },
+  "notification_antiadblock_title": {
+    "message": "¿Eliminar mensajes dirigidos?"
+  },
+  "overlay_notification_button_no": {
+    "message": "No"
+  },
+  "overlay_notification_button_yes": {
+    "message": "Sí"
+  },
+  "filter_elemhideemulation_nodomain": {
+    "message": "No se ha especificado ningún dominio activo para el filtro de ocultación de elementos extendidos"
+  },
+  "filter_invalid_csp": {
+    "message": "Política de seguridad de contenido no válida"
+  },
+  "filter_invalid_domain": {
+    "message": "Dominio especificado no válido (o vacío)"
+  },
+  "filter_invalid_regexp": {
+    "message": "Expresión frecuente no válida"
+  },
+  "filter_snippet_nodomain": {
+    "message": "No se ha especificado ningún dominio activo para el filtro de código"
+  },
+  "filter_unknown_option": {
+    "message": "Opción de filtro desconocida"
+  },
+  "unexpected_filter_list_header": {
+    "description": "Error message shown when the user attempts to add a custom filter that has the format of a header (e.g. \"[Adblock Plus 2.0]\") which are only allowed in filter lists",
+    "message": "No se permiten listas de filtros con formato de título"
+  },
+  "filter_invalid": {
+    "message": "Filtro no válido",
+    "description": "Generic error shown when the user tries to add an invalid filter rule to their custom filters"
+  },
+  "love_adblock": {
+    "message": "¿Te gusta AdBlock?",
+    "description": "Text in a button that asks users to rate us."
+  },
+  "show_some_love": {
+    "message": "¡Apoya a AdBlock!",
+    "description": "Title of the tooltip of the rate us button CTA in the Options page."
+  },
+  "support_with_a_review": {
+    "message": "Ayuda a nuestro equipo mandando tus comentarios.",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "leave_a_review": {
+    "message": "¡Déjanos tus comentarios!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "rate_us": {
+    "message": "Puntúanos",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "youve_blocked_num_ads": {
+    "message": "¡Has bloqueado $numBlocked$ anuncios!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review. The $numBlocked$ will be replaced with the number of ads the users has blocked, starting at 10,000.",
+    "placeholders": {
+      "numBlocked": {
+        "content": "$1",
+        "example": "10,000"
+      }
+    }
+  },
+  "enjoying_adblock": {
+    "message": "¿Te gusta AdBlock?",
+    "description": "Text of a footer in the popup menu help flow asking users to leave us a review."
+  },
+  "back_help_flow": {
+    "message": "Vuelve un paso atrás en el proceso de ayuda.",
+    "description": "Aria label for back button in help flow (in popup menu)"
+  },
+  "close_help_flow": {
+    "message": "Cierra el proceso de ayuda y vuelve al menú emergente.",
+    "description": "Aria label for close button in help flow (in popup menu)"
   }
 }
