--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -15,6 +15,10 @@
     "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
     "message": "AdBlock — 最高峰の広告ブロッカー"
   },
+  "name": {
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock — 最高峰の広告ブロッカー"
+  },
   "description_edge": {
     "message": "AdBlockは2億回ダウンロードを誇るNo.1の広告ブロッカーです。ウェブ上のあらゆる広告をブロックしましょう。",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -650,7 +654,7 @@
     "description": "Acceptable Ads message on ad report page"
   },
   "aalinkadreport": {
-    "message": "Acceptable Adsプログラムについての詳細を確認しましょう。",
+    "message": "控えめな広告プログラムについての詳細を確認しましょう。",
     "description": "Acceptable Ads link message on ad report page"
   },
   "adreportthanks": {
@@ -1983,52 +1987,6 @@
     "message": "以下のカテゴリから選択してください。AdBlockは時々ユーザーの気分を和らげるために高品質の画像で広告を置き換えます。",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
-  "myadblock_enrollment_title": {
-    "message": "MyAdBlockがこのブラウザ用に設定されました！",
-    "description": "The title of the MyAdBlock enrollment box."
-  },
-  "myadblock_enrollment_hide_forever": {
-    "message": "このメッセージを今後表示しない",
-    "description": "The label for a checkbox that will hide the enrollment box forever."
-  },
-  "myadblock_enrollment_success": {
-    "message": "メール内の魔法のリンクを使用し、MyAdBlockを他のChromeのブラウザでアンロックさせることが可能です。",
-    "description": "MyAdBlock successfully licensed message."
-  },
-  "check_email": {
-    "message": "メールをご確認下さい。",
-    "description": "Prompt the user to check their email for a message from AdBlock"
-  },
-  "please_try_again": {
-    "message": "再度お試し下さい。",
-    "description": "Prompt the user to retry the last action."
-  },
-  "contact_support_if_errors_continue": {
-    "message": "このエラーが引き続き発生する場合は、 [[support]]にお問い合わせ下さい。",
-    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
-  },
-  "myadblock_enrollment_resend_success": {
-    "message": "魔法のリンクを$email$に送信しました。",
-    "description": "MyAdBlock license email successfully sent message.",
-    "placeholders": {
-      "email": {
-        "content": "$1",
-        "example": "alice@example.com"
-      }
-    }
-  },
-  "myadblock_enrollment_link_info": {
-    "message": "リンクをクリックすることで、MyAdBlockを他のChromeブラウザで手軽に設定することができます。",
-    "description": "Explains what happens when clicking the magic link."
-  },
-  "myadblock_enrollment_resend_error": {
-    "message": "確認メールを再送信中に問題が発生しました。",
-    "description": "MyAdBlock license email failed to send error message."
-  },
-  "myadblock_enrollment_resend_button": {
-    "message": "リンクの再送信",
-    "description": "Text on the MyAdBlock enrollment resend email button"
-  },
   "myadblock_feedback_title": {
     "message": "あなたのご意見をお聞かせ下さい！",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2152,10 +2110,6 @@
   "require_restart_browser": {
     "message": "ブラウザを再起動する必要があります",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
-  },
-  "tabthemes": {
-    "message": "テーマ",
-    "description": "A tab on the Options page"
   },
   "themes": {
     "message": "テーマ",
@@ -2504,8 +2458,18 @@
     "message": "リクエスト"
   },
   "devtools_request_url": {
-    "description": "sub title text for the request-column of the dev tools panel when the request is rewritten e.g. http://example.com/foo rewritten to http://example.com/bar",
-    "message": "<a0></a0>が<a1></a1>に上書きされました"
+    "description": "A request URL in the AdBlock DevTools panel",
+    "message": "<a0>$original$</a0>が<a1>$rewritten$</a1>に書き換えられました",
+    "placeholders": {
+      "original": {
+        "content": "$1",
+        "example": "http://example.com/foo"
+      },
+      "rewritten": {
+        "content": "$2",
+        "example": "http://example.com/bar"
+      }
+    }
   },
   "devtools_type_title": {
     "description": "Type column header text",
@@ -2883,18 +2847,6 @@
     "message": "AdBlock Premium",
     "description": "Full name of the AdBlock upgrade."
   },
-  "premium_enrollment_title": {
-    "message": "このブラウザでAdBlock Premiumの設定が完了しました！",
-    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
-  },
-  "premium_enrollment_success": {
-    "message": "メール内の魔法のリンクを使用し、AdBlock Premiumを他のChromeのブラウザでアンロックさせることが可能です。",
-    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
-  },
-  "premium_enrollment_link_info": {
-    "message": "リンクをクリックすることで、AdBlock Premiumを他のChromeブラウザで手軽に設定することができます。",
-    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
-  },
   "premium_page_title": {
     "message": "AdBlock Premium: インターネットをより快適にブラウズする方法。",
     "description": "The text of the header the AdBlock Premium Options page"
@@ -2966,5 +2918,85 @@
   "check_out_themes": {
     "message": "テーマをチェック！",
     "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "notification_antiadblock_message": {
+    "message": "このサイトは、AdBlockユーザーにターゲットを絞ったメッセージを表示します。AdBlockでターゲットメッセージを非表示にしたいですか？"
+  },
+  "notification_antiadblock_title": {
+    "message": "ターゲットメッセージを非表示にしますか？"
+  },
+  "overlay_notification_button_no": {
+    "message": "いいえ"
+  },
+  "overlay_notification_button_yes": {
+    "message": "はい"
+  },
+  "filter_elemhideemulation_nodomain": {
+    "message": "拡張要素非表示フィルターに有効なドメインが指定されていません"
+  },
+  "filter_invalid_csp": {
+    "message": "無効なコンテンツセキュリティポリシーです"
+  },
+  "filter_invalid_domain": {
+    "message": "無効な(または空の)ドメインが指定されました"
+  },
+  "filter_invalid_regexp": {
+    "message": "無効な正規表現です"
+  },
+  "filter_snippet_nodomain": {
+    "message": "スニペットフィルターに有効なドメインが指定されていません"
+  },
+  "filter_unknown_option": {
+    "message": "不明なフィルターオプションです"
+  },
+  "unexpected_filter_list_header": {
+    "description": "Error message shown when the user attempts to add a custom filter that has the format of a header (e.g. \"[Adblock Plus 2.0]\") which are only allowed in filter lists",
+    "message": "ここではフィルターリストヘッダーは使用できません"
+  },
+  "filter_invalid": {
+    "message": "無効なフィルターです",
+    "description": "Generic error shown when the user tries to add an invalid filter rule to their custom filters"
+  },
+  "love_adblock": {
+    "message": "AdBlockを気に入ってもらえていますか？",
+    "description": "Text in a button that asks users to rate us."
+  },
+  "show_some_love": {
+    "message": "AdBlockへの愛を示しましょう！",
+    "description": "Title of the tooltip of the rate us button CTA in the Options page."
+  },
+  "support_with_a_review": {
+    "message": "レビューを投稿し、私たちのチームをご支援下さい。",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "leave_a_review": {
+    "message": "レビューを投稿して下さい！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "rate_us": {
+    "message": "評価して下さい",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "youve_blocked_num_ads": {
+    "message": "$numBlocked$個の広告をブロックしました！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review. The $numBlocked$ will be replaced with the number of ads the users has blocked, starting at 10,000.",
+    "placeholders": {
+      "numBlocked": {
+        "content": "$1",
+        "example": "10,000"
+      }
+    }
+  },
+  "enjoying_adblock": {
+    "message": "AdBlockを快適に使用できていますか？",
+    "description": "Text of a footer in the popup menu help flow asking users to leave us a review."
+  },
+  "back_help_flow": {
+    "message": "ヘルプまで1回戻って下さい。",
+    "description": "Aria label for back button in help flow (in popup menu)"
+  },
+  "close_help_flow": {
+    "message": "ヘルプを閉じてポップアップメニューに戻って下さい。",
+    "description": "Aria label for close button in help flow (in popup menu)"
   }
 }
