--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -15,6 +15,10 @@
     "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
     "message": "AdBlock — den bästa annonsblockeraren"
   },
+  "name": {
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock — den bästa annonsblockeraren"
+  },
   "description_edge": {
     "message": "AdBlock. Den bästa annonsblockeraren med över 200 miljoner nedladdningar. Blockerar annonser över hela nätet.",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1983,52 +1987,6 @@
     "message": "Välj bland kategorierna nedan så kommer AdBlock ibland att ersätta annonser med bilder i hög kvalitet för att pigga upp din dag.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
-  "myadblock_enrollment_title": {
-    "message": "MyAdBlock är installerat på den här webbläsaren!",
-    "description": "The title of the MyAdBlock enrollment box."
-  },
-  "myadblock_enrollment_hide_forever": {
-    "message": "Visa inte det här meddelandet igen",
-    "description": "The label for a checkbox that will hide the enrollment box forever."
-  },
-  "myadblock_enrollment_success": {
-    "message": "Du kan följa den magiska länken i ditt bekräftelsemail för att låsa upp MyAdBlock i andra Chrome-webbläsare.",
-    "description": "MyAdBlock successfully licensed message."
-  },
-  "check_email": {
-    "message": "Kolla din inbox.",
-    "description": "Prompt the user to check their email for a message from AdBlock"
-  },
-  "please_try_again": {
-    "message": "Försök igen.",
-    "description": "Prompt the user to retry the last action."
-  },
-  "contact_support_if_errors_continue": {
-    "message": "Om du fortsätter att få det här felmeddelandet, vänligen kontakta [[[support]].",
-    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
-  },
-  "myadblock_enrollment_resend_success": {
-    "message": "Vi har skickat en magisk länk till $email$.",
-    "description": "MyAdBlock license email successfully sent message.",
-    "placeholders": {
-      "email": {
-        "content": "$1",
-        "example": "alice@example.com"
-      }
-    }
-  },
-  "myadblock_enrollment_link_info": {
-    "message": "Följ länken för att enkelt installera MyAdBlock i andra Chrome-webbläsare.",
-    "description": "Explains what happens when clicking the magic link."
-  },
-  "myadblock_enrollment_resend_error": {
-    "message": "Det gick inte att skicka ditt bekräftelsemail på nytt.",
-    "description": "MyAdBlock license email failed to send error message."
-  },
-  "myadblock_enrollment_resend_button": {
-    "message": "skicka länk på nytt",
-    "description": "Text on the MyAdBlock enrollment resend email button"
-  },
   "myadblock_feedback_title": {
     "message": "Hör gärna av dig till oss!",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2152,10 +2110,6 @@
   "require_restart_browser": {
     "message": "kräver omstart av webbläsaren",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
-  },
-  "tabthemes": {
-    "message": "Teman",
-    "description": "A tab on the Options page"
   },
   "themes": {
     "message": "Teman",
@@ -2432,7 +2386,7 @@
     "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
-    "message": "Sekretess för godkänd reklam",
+    "message": "Sekretess för Godtagbara annonser",
     "description": "A filter list"
   },
   "acceptable_ads_privacy": {
@@ -2504,8 +2458,18 @@
     "message": "Förfrågan"
   },
   "devtools_request_url": {
-    "description": "sub title text for the request-column of the dev tools panel when the request is rewritten e.g. http://example.com/foo rewritten to http://example.com/bar",
-    "message": "<a0></a0> omskriven till <a1></a1>"
+    "description": "A request URL in the AdBlock DevTools panel",
+    "message": "<a0>$original$</a0> omskriven till <a1>$rewritten$</a1>",
+    "placeholders": {
+      "original": {
+        "content": "$1",
+        "example": "http://example.com/foo"
+      },
+      "rewritten": {
+        "content": "$2",
+        "example": "http://example.com/bar"
+      }
+    }
   },
   "devtools_type_title": {
     "description": "Type column header text",
@@ -2883,18 +2847,6 @@
     "message": "AdBlock Premium",
     "description": "Full name of the AdBlock upgrade."
   },
-  "premium_enrollment_title": {
-    "message": "AdBlock Premium är aktiverat i den här webbläsaren!",
-    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
-  },
-  "premium_enrollment_success": {
-    "message": "Du kan följa den magiska länken i ditt bekräftelsemail för att låsa upp AdBlock Premium i andra Chrome-webbläsare.",
-    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
-  },
-  "premium_enrollment_link_info": {
-    "message": "Följ länken för att enkelt installera AdBlock Premium i andra Chrome-webbläsare.",
-    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
-  },
   "premium_page_title": {
     "message": "AdBlock Premium: Ett bättre sätt att surfa på.",
     "description": "The text of the header the AdBlock Premium Options page"
@@ -2966,5 +2918,85 @@
   "check_out_themes": {
     "message": "Kolla in våra teman!",
     "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "notification_antiadblock_message": {
+    "message": "Den här webbplatsen är känd sedan tidigare för att visa riktade meddelanden till AdBlock-användare. Vill du att AdBlock ska dölja riktade meddelanden?"
+  },
+  "notification_antiadblock_title": {
+    "message": "Dölj riktade meddelanden?"
+  },
+  "overlay_notification_button_no": {
+    "message": "Nej"
+  },
+  "overlay_notification_button_yes": {
+    "message": "Ja"
+  },
+  "filter_elemhideemulation_nodomain": {
+    "message": "Ingen aktiv domän har specificerats för det utökade elementdöljande filtret"
+  },
+  "filter_invalid_csp": {
+    "message": "Ogiltig säkerhetspolicy för innehåll"
+  },
+  "filter_invalid_domain": {
+    "message": "Ogiltig (eller tom) domän specificerad"
+  },
+  "filter_invalid_regexp": {
+    "message": "Ogiltigt vanligt uttryck"
+  },
+  "filter_snippet_nodomain": {
+    "message": "Ingen aktiv domän har specificerats för kodavsnittsfiltret"
+  },
+  "filter_unknown_option": {
+    "message": "Okänt filteralternativ"
+  },
+  "unexpected_filter_list_header": {
+    "description": "Error message shown when the user attempts to add a custom filter that has the format of a header (e.g. \"[Adblock Plus 2.0]\") which are only allowed in filter lists",
+    "message": "Rubriker på filterlistor är inte tillåtna här"
+  },
+  "filter_invalid": {
+    "message": "Ogiltigt filter",
+    "description": "Generic error shown when the user tries to add an invalid filter rule to their custom filters"
+  },
+  "love_adblock": {
+    "message": "Älskar du AdBlock?",
+    "description": "Text in a button that asks users to rate us."
+  },
+  "show_some_love": {
+    "message": "Visa lite kärlek för AdBlock!",
+    "description": "Title of the tooltip of the rate us button CTA in the Options page."
+  },
+  "support_with_a_review": {
+    "message": "Stöd vårt team genom att recensera oss.",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "leave_a_review": {
+    "message": "Recensera oss!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "rate_us": {
+    "message": "Betygsätt oss",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "youve_blocked_num_ads": {
+    "message": "Du har blockerat $numBlocked$ annonser!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review. The $numBlocked$ will be replaced with the number of ads the users has blocked, starting at 10,000.",
+    "placeholders": {
+      "numBlocked": {
+        "content": "$1",
+        "example": "10,000"
+      }
+    }
+  },
+  "enjoying_adblock": {
+    "message": "Gillar du AdBlock?",
+    "description": "Text of a footer in the popup menu help flow asking users to leave us a review."
+  },
+  "back_help_flow": {
+    "message": "Gå ett steg tillbaka i hjälpflödet.",
+    "description": "Aria label for back button in help flow (in popup menu)"
+  },
+  "close_help_flow": {
+    "message": "Stäng hjälpflödet och återgå till popup-menyn.",
+    "description": "Aria label for close button in help flow (in popup menu)"
   }
 }
