--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -15,6 +15,10 @@
     "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
     "message": "AdBlock — 最佳广告拦截工具"
   },
+  "name": {
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock — 最佳广告拦截工具"
+  },
   "description_edge": {
     "message": "AdBlock。排名第一的广告拦截应用，下载量超过 2 亿。拦截网页上的广告。",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1983,52 +1987,6 @@
     "message": "从以下类别中进行选择，AdBlock 偶尔会将广告替换为高质量的图片，以照亮你的一天。",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
-  "myadblock_enrollment_title": {
-    "message": "MyAdBlock 已在此浏览器中设置完成！",
-    "description": "The title of the MyAdBlock enrollment box."
-  },
-  "myadblock_enrollment_hide_forever": {
-    "message": "不再显示此消息",
-    "description": "The label for a checkbox that will hide the enrollment box forever."
-  },
-  "myadblock_enrollment_success": {
-    "message": "你可以使用确认电子邮件中的魔术链接在其他 Chrome 浏览器中解锁 MyAdBlock。",
-    "description": "MyAdBlock successfully licensed message."
-  },
-  "check_email": {
-    "message": "请检查你的电子邮件。",
-    "description": "Prompt the user to check their email for a message from AdBlock"
-  },
-  "please_try_again": {
-    "message": "请重试。",
-    "description": "Prompt the user to retry the last action."
-  },
-  "contact_support_if_errors_continue": {
-    "message": "如果错误仍然存在，请联络[[支持团队]]。",
-    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
-  },
-  "myadblock_enrollment_resend_success": {
-    "message": "我们已向 $email$ 发送魔术链接。",
-    "description": "MyAdBlock license email successfully sent message.",
-    "placeholders": {
-      "email": {
-        "content": "$1",
-        "example": "alice@example.com"
-      }
-    }
-  },
-  "myadblock_enrollment_link_info": {
-    "message": "点击该链接可以轻松在其他 Chrome 浏览器中设置 MyAdBlock。",
-    "description": "Explains what happens when clicking the magic link."
-  },
-  "myadblock_enrollment_resend_error": {
-    "message": "重新发送确认电子邮件时出现问题。",
-    "description": "MyAdBlock license email failed to send error message."
-  },
-  "myadblock_enrollment_resend_button": {
-    "message": "重新发送链接",
-    "description": "Text on the MyAdBlock enrollment resend email button"
-  },
   "myadblock_feedback_title": {
     "message": "我们很想听到您的意见！",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2152,10 +2110,6 @@
   "require_restart_browser": {
     "message": "需要重新启动浏览器",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
-  },
-  "tabthemes": {
-    "message": "主题",
-    "description": "A tab on the Options page"
   },
   "themes": {
     "message": "主题",
@@ -2504,8 +2458,18 @@
     "message": "请求"
   },
   "devtools_request_url": {
-    "description": "sub title text for the request-column of the dev tools panel when the request is rewritten e.g. http://example.com/foo rewritten to http://example.com/bar",
-    "message": "<a0></a0> 改写为 <a1></a1>"
+    "description": "A request URL in the AdBlock DevTools panel",
+    "message": "<a0>$original$</a0> 改写为 <a1>$rewritten$</a1>",
+    "placeholders": {
+      "original": {
+        "content": "$1",
+        "example": "http://example.com/foo"
+      },
+      "rewritten": {
+        "content": "$2",
+        "example": "http://example.com/bar"
+      }
+    }
   },
   "devtools_type_title": {
     "description": "Type column header text",
@@ -2883,18 +2847,6 @@
     "message": "AdBlock Premium",
     "description": "Full name of the AdBlock upgrade."
   },
-  "premium_enrollment_title": {
-    "message": "AdBlock Premium已在此浏览器上设置完成！",
-    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
-  },
-  "premium_enrollment_success": {
-    "message": "您可以使用确认电子邮件中的魔术链接在其他Chrome浏览器中解锁AdBlock Premium。",
-    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
-  },
-  "premium_enrollment_link_info": {
-    "message": "Clicking the link makes it easy to set up AdBlock Premium in other Chrome browsers.",
-    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
-  },
   "premium_page_title": {
     "message": "AdBlock Premium：浏览互联网的更好方法。",
     "description": "The text of the header the AdBlock Premium Options page"
@@ -2966,5 +2918,85 @@
   "check_out_themes": {
     "message": "查看各种主题！",
     "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "notification_antiadblock_message": {
+    "message": "已知该网站会向 AdBlock 用户显示定向消息。您希望 AdBlock 隐藏定向消息吗？"
+  },
+  "notification_antiadblock_title": {
+    "message": "是否隐藏定向消息？"
+  },
+  "overlay_notification_button_no": {
+    "message": "否"
+  },
+  "overlay_notification_button_yes": {
+    "message": "是"
+  },
+  "filter_elemhideemulation_nodomain": {
+    "message": "没有为扩展元素隐藏过滤器指定活动域"
+  },
+  "filter_invalid_csp": {
+    "message": "无效的内容安全政策"
+  },
+  "filter_invalid_domain": {
+    "message": "指定的域名无效（或为空）"
+  },
+  "filter_invalid_regexp": {
+    "message": "无效的正则表达式"
+  },
+  "filter_snippet_nodomain": {
+    "message": "未为片段拦截规则指定活动域名"
+  },
+  "filter_unknown_option": {
+    "message": "未知拦截规则选项"
+  },
+  "unexpected_filter_list_header": {
+    "description": "Error message shown when the user attempts to add a custom filter that has the format of a header (e.g. \"[Adblock Plus 2.0]\") which are only allowed in filter lists",
+    "message": "此处不允许拦截规则列表标题拦截规则列表"
+  },
+  "filter_invalid": {
+    "message": "无效的拦截规则",
+    "description": "Generic error shown when the user tries to add an invalid filter rule to their custom filters"
+  },
+  "love_adblock": {
+    "message": "喜欢 AdBlock 吗？",
+    "description": "Text in a button that asks users to rate us."
+  },
+  "show_some_love": {
+    "message": "展示你对 AdBlock 的喜爱！",
+    "description": "Title of the tooltip of the rate us button CTA in the Options page."
+  },
+  "support_with_a_review": {
+    "message": "给我们评论，支持我们的团队。",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "leave_a_review": {
+    "message": "给我们留下评论！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "rate_us": {
+    "message": "评价我们",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "youve_blocked_num_ads": {
+    "message": "你拦截了 $numBlocked$ 个广告！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review. The $numBlocked$ will be replaced with the number of ads the users has blocked, starting at 10,000.",
+    "placeholders": {
+      "numBlocked": {
+        "content": "$1",
+        "example": "10,000"
+      }
+    }
+  },
+  "enjoying_adblock": {
+    "message": "喜欢 AdBlock 吗？",
+    "description": "Text of a footer in the popup menu help flow asking users to leave us a review."
+  },
+  "back_help_flow": {
+    "message": "返回帮助流程中的一步。",
+    "description": "Aria label for back button in help flow (in popup menu)"
+  },
+  "close_help_flow": {
+    "message": "关闭帮助流程并返回弹出式菜单。",
+    "description": "Aria label for close button in help flow (in popup menu)"
   }
 }
