--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -15,6 +15,10 @@
     "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
     "message": "AdBlock — 最佳廣告攔截程式"
   },
+  "name": {
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock — 最佳廣告攔截程式"
+  },
   "description_edge": {
     "message": "AdBlock。排名第一的廣告攔截程式，下載量超過兩億。阻擋網路上的各種廣告。",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1076,11 +1080,11 @@
     "description": "instruction for how to check Firefox or Chrome for a reported ad"
   },
   "checkinfirefox_2": {
-    "message": "如果沒有的話，請安裝 Firefox 版 AdBlock。",
+    "message": "如果沒有的話，請安裝 Firefox 版 Adblock Plus。",
     "description": "Instruction for how to check Firefox for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefoxorchrome_2": {
-    "message": "如果沒有的話，請安裝 Firefox 版 AdBlock Plus 或 Chrome 版 AdBlock。",
+    "message": "如果沒有的話，請安裝 Firefox 版 Adblock Plus 或 Chrome 版 AdBlock。",
     "description": "Instruction for how to check Firefox/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3": {
@@ -1983,52 +1987,6 @@
     "message": "從以下類別選擇，AdBlock 有時就會將廣告替換為高畫質圖片，帶給您愉快的心情。",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
-  "myadblock_enrollment_title": {
-    "message": "MyAdBlock 已在此瀏覽器中設定完成！",
-    "description": "The title of the MyAdBlock enrollment box."
-  },
-  "myadblock_enrollment_hide_forever": {
-    "message": "不再顯示此訊息",
-    "description": "The label for a checkbox that will hide the enrollment box forever."
-  },
-  "myadblock_enrollment_success": {
-    "message": "您可以使用確認信中的一鍵連結，在其他 Chrome 瀏覽器中解鎖 MyAdBlock。",
-    "description": "MyAdBlock successfully licensed message."
-  },
-  "check_email": {
-    "message": "請查看您的電子郵件。",
-    "description": "Prompt the user to check their email for a message from AdBlock"
-  },
-  "please_try_again": {
-    "message": "請再試一次。",
-    "description": "Prompt the user to retry the last action."
-  },
-  "contact_support_if_errors_continue": {
-    "message": "如果您仍看到此錯誤，請聯絡[[support]]。",
-    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
-  },
-  "myadblock_enrollment_resend_success": {
-    "message": "我們已寄出一鍵連結到 $email$。",
-    "description": "MyAdBlock license email successfully sent message.",
-    "placeholders": {
-      "email": {
-        "content": "$1",
-        "example": "alice@example.com"
-      }
-    }
-  },
-  "myadblock_enrollment_link_info": {
-    "message": "按下連結即可輕鬆在其他 Chrome 瀏覽器中設定 MyAdBlock。",
-    "description": "Explains what happens when clicking the magic link."
-  },
-  "myadblock_enrollment_resend_error": {
-    "message": "重新寄送確認電子郵件時出現問題。",
-    "description": "MyAdBlock license email failed to send error message."
-  },
-  "myadblock_enrollment_resend_button": {
-    "message": "重寄連結",
-    "description": "Text on the MyAdBlock enrollment resend email button"
-  },
   "myadblock_feedback_title": {
     "message": "我們很樂意聽到您的意見！",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2152,10 +2110,6 @@
   "require_restart_browser": {
     "message": "需要重新啟動瀏覽器",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
-  },
-  "tabthemes": {
-    "message": "佈景主題",
-    "description": "A tab on the Options page"
   },
   "themes": {
     "message": "佈景主題",
@@ -2504,8 +2458,18 @@
     "message": "要求"
   },
   "devtools_request_url": {
-    "description": "sub title text for the request-column of the dev tools panel when the request is rewritten e.g. http://example.com/foo rewritten to http://example.com/bar",
-    "message": "<a0></a0>改寫為<a1></a1>"
+    "description": "A request URL in the AdBlock DevTools panel",
+    "message": "<a0>$original$</a0>改寫為<a1>$rewritten$</a1>",
+    "placeholders": {
+      "original": {
+        "content": "$1",
+        "example": "http://example.com/foo"
+      },
+      "rewritten": {
+        "content": "$2",
+        "example": "http://example.com/bar"
+      }
+    }
   },
   "devtools_type_title": {
     "description": "Type column header text",
@@ -2883,18 +2847,6 @@
     "message": "AdBlock Premium",
     "description": "Full name of the AdBlock upgrade."
   },
-  "premium_enrollment_title": {
-    "message": "AdBlock Premium 已在此瀏覽器中設定完成！",
-    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
-  },
-  "premium_enrollment_success": {
-    "message": "您可以使用確認信中的一鍵連結，在其他 Chrome 瀏覽器中解鎖 AdBlock Premium。",
-    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
-  },
-  "premium_enrollment_link_info": {
-    "message": "Clicking the link makes it easy to set up AdBlock Premium in other Chrome browsers.",
-    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
-  },
   "premium_page_title": {
     "message": "AdBlock Premium：瀏覽網路的更好方式。",
     "description": "The text of the header the AdBlock Premium Options page"
@@ -2966,5 +2918,85 @@
   "check_out_themes": {
     "message": "快來看看各種主題！",
     "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "notification_antiadblock_message": {
+    "message": "已知該網站會向 AdBlock 使用者顯示定向訊息。要 AdBlock 隱藏定向訊息嗎？"
+  },
+  "notification_antiadblock_title": {
+    "message": "是否隱藏定向訊息？"
+  },
+  "overlay_notification_button_no": {
+    "message": "否"
+  },
+  "overlay_notification_button_yes": {
+    "message": "是"
+  },
+  "filter_elemhideemulation_nodomain": {
+    "message": "沒有擴充元素隱藏過濾條件的指定啟用網域"
+  },
+  "filter_invalid_csp": {
+    "message": "無效的內容安全政策"
+  },
+  "filter_invalid_domain": {
+    "message": "指定的網域無效（或空白）"
+  },
+  "filter_invalid_regexp": {
+    "message": "無效的規則運算式"
+  },
+  "filter_snippet_nodomain": {
+    "message": "程式碼片段過濾條件未指定有效網域"
+  },
+  "filter_unknown_option": {
+    "message": "未知過濾條件選項"
+  },
+  "unexpected_filter_list_header": {
+    "description": "Error message shown when the user attempts to add a custom filter that has the format of a header (e.g. \"[Adblock Plus 2.0]\") which are only allowed in filter lists",
+    "message": "此處不允許過濾清單標題"
+  },
+  "filter_invalid": {
+    "message": "無效的過濾條件",
+    "description": "Generic error shown when the user tries to add an invalid filter rule to their custom filters"
+  },
+  "love_adblock": {
+    "message": "喜歡 AdBlock 嗎？",
+    "description": "Text in a button that asks users to rate us."
+  },
+  "show_some_love": {
+    "message": "展示您對 AdBlock 的愛！",
+    "description": "Title of the tooltip of the rate us button CTA in the Options page."
+  },
+  "support_with_a_review": {
+    "message": "留下評論給我們，對我們的團隊表達支持。",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "leave_a_review": {
+    "message": "寫評論給我們！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "rate_us": {
+    "message": "給我們評價",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "youve_blocked_num_ads": {
+    "message": "您已阻擋了 $numBlocked$ 則廣告！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review. The $numBlocked$ will be replaced with the number of ads the users has blocked, starting at 10,000.",
+    "placeholders": {
+      "numBlocked": {
+        "content": "$1",
+        "example": "10,000"
+      }
+    }
+  },
+  "enjoying_adblock": {
+    "message": "喜歡 AdBlock 嗎？",
+    "description": "Text of a footer in the popup menu help flow asking users to leave us a review."
+  },
+  "back_help_flow": {
+    "message": "在說明流程中返回前一步。",
+    "description": "Aria label for back button in help flow (in popup menu)"
+  },
+  "close_help_flow": {
+    "message": "關閉說明流程並回到彈出視窗選單。",
+    "description": "Aria label for close button in help flow (in popup menu)"
   }
 }
